Bug 472145 - Install samba feature/button fails to install samba via packagelkit
Summary: Install samba feature/button fails to install samba via packagelkit
Status: RESOLVED FIXED
Alias: None
Product: kdenetwork-filesharing
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR major
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-10 22:37 UTC by Rik Mills
Modified: 2023-11-20 23:47 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Samba install failure (159.32 KB, image/png)
2023-07-10 22:40 UTC, Rik Mills
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rik Mills 2023-07-10 22:37:07 UTC
STEPS TO REPRODUCE
1. Install kdenetwork-filesharing
2. In dolphin right click a folder you wish to share, and click properties.
2. Select the 'Share' tab in the properties window.
3. Click  the button to install the distro samba package.

OBSERVED RESULT

An expected polkit dialog to authorise packagekit to install the distro samba package does not appear.
The message "The samba package failed to install" is displayed instead.

EXPECTED RESULT

A polkit auth diagog should appear, and upon successful admin password entry the distro samba package should be installed and the sharing options enabled.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Neon 22.04 and Kubuntu 23.04
KDE Plasma Version: 5.27.6
KDE Frameworks Version: 5.107.0/5.108.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION

System log records simply that packagekit failed to gain authorisation.
Comment 1 Rik Mills 2023-07-10 22:40:14 UTC
Created attachment 160230 [details]
Samba install failure
Comment 2 Aleix Pol 2023-07-11 18:30:35 UTC
Can you check if pkcon does the right thing there?

Have you tried running it from a terminal? It might give some further insight of what is happening.
Comment 3 Nate Graham 2023-07-11 20:29:38 UTC
.
Comment 4 Rik Mills 2023-07-11 20:50:08 UTC
Verbose log from packagekit:

Jul 11 21:47:51 ##### packagekitd[369413]: 21:47:51        PackageKit        idle is 10
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        CreateTransaction method called
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        job count now 3435
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        trying to open database '/var/lib/PackageKit/transactions.db'
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        job count is now at 3434
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        transaction now new
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        setting sender to :1.6089
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        adding transaction 0x564cdc9d9be0
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        sending object path: '/3435_accecaad'
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        notify::connected
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        SetHints method called: supports-plural-signals=true
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        Client has set supports-plural-signals=true
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        Resolve method called: 262144, samba
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        transaction now ready
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        changing transaction to exclusive mode
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        1 transactions in list, 1 committed but not finished
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        transaction now running
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        install uid now 1000
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        install cmdline now PackageKit: resolve
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        setting role for /3435_accecaad to resolve
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        emit package available, samba;2:4.17.7+dfsg-1ubuntu1;amd64;ubuntu-lunar-main, SMB/CIFS file, print, and login server for Unix
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        backend was running for 386 ms
Jul 11 21:47:52 ##### PackageKit[369413]: resolve transaction /3435_accecaad from uid 1000 finished with success after 386ms
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        emitting finished 'success', 386
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        transaction now finished
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        1 transactions in list, 0 committed but not finished
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        CreateTransaction method called
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        job count now 3436
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        trying to open database '/var/lib/PackageKit/transactions.db'
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        job count is now at 3435
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        transaction now new
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        setting sender to :1.6089
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        adding transaction 0x564cdca12750
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        sending object path: '/3436_dacebced'
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        SetHints method called: supports-plural-signals=true
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        Client has set supports-plural-signals=true
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        InstallPackages method called: samba;2:4.17.7+dfsg-1ubuntu1;amd64;ubuntu-lunar-main (transaction_flags: only-trusted)
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        changing transaction to exclusive mode
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        transaction now waiting-for-auth
Jul 11 21:47:52 ##### PackageKit[369413]: uid 1000 is trying to obtain org.freedesktop.packagekit.package-install auth (only_trusted:1)
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        authorizing action org.freedesktop.packagekit.package-install
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        emitting error-code not-authorized, 'Failed to obtain authentication.'
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        emitting finished 'failed', 0
Jul 11 21:47:52 ##### packagekitd[369413]: ***
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        internal error: failed, but no error code: unknown
Jul 11 21:47:52 ##### packagekitd[369413]: ***
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        transaction now finished
Jul 11 21:47:52 ##### packagekitd[369413]: 21:47:52        PackageKit        2 transactions in list, 0 committed but not finished
Jul 11 21:47:52 ##### PackageKit[369413]: uid 1000 failed to obtain auth
Jul 11 21:47:56 ##### packagekitd[369413]: 21:47:56        PackageKit        engine idle zero as 2 transactions in progress
Jul 11 21:47:56 ##### packagekitd[369413]: 21:47:56        PackageKit        idle is 0
Jul 11 21:47:58 ##### packagekitd[369413]: 21:47:58        PackageKit        transaction /3435_accecaad completed, removing
Jul 11 21:47:58 ##### packagekitd[369413]: 21:47:58        PackageKit        emitting destroy /3435_accecaad
Jul 11 21:47:58 ##### packagekitd[369413]: 21:47:58        PackageKit        transaction /3436_dacebced completed, removing
Jul 11 21:47:58 ##### packagekitd[369413]: 21:47:58        PackageKit        emitting destroy /3436_dacebced
Comment 5 Rik Mills 2023-07-11 20:55:22 UTC
(In reply to Aleix Pol from comment #2)
> Can you check if pkcon does the right thing there?

'pkcon intall samba' in konsole results in a polkit dialog and a successful install
Comment 6 Rik Mills 2023-11-11 22:00:28 UTC
Still the same bug in 23.10 with kdenetwork-filesharing 23.08
Comment 7 Bug Janitor Service 2023-11-20 23:44:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/kdenetwork-filesharing/-/merge_requests/47
Comment 8 Harald Sitter 2023-11-20 23:46:16 UTC
Git commit 6de8426f33ff6dc09ca236717799a4d90ef87b00 by Harald Sitter.
Committed on 21/11/2023 at 00:45.
Pushed by sitter into branch 'master'.

packagekit: allow interactive auth dialogs

without this newer versions of pk don't show any auth dialog

M  +2    -0    samba/filepropertiesplugin/sambainstaller.cpp

https://invent.kde.org/network/kdenetwork-filesharing/-/commit/6de8426f33ff6dc09ca236717799a4d90ef87b00
Comment 9 Harald Sitter 2023-11-20 23:47:26 UTC
Git commit 6cbdd2bd71b3d6f030f0611497874eeee3414d4f by Harald Sitter.
Committed on 21/11/2023 at 00:46.
Pushed by sitter into branch 'release/23.08'.

packagekit: allow interactive auth dialogs

without this newer versions of pk don't show any auth dialog


(cherry picked from commit 6de8426f33ff6dc09ca236717799a4d90ef87b00)

M  +2    -0    samba/filepropertiesplugin/sambainstaller.cpp

https://invent.kde.org/network/kdenetwork-filesharing/-/commit/6cbdd2bd71b3d6f030f0611497874eeee3414d4f