packagekit: allow interactive auth dialogs

without this newer versions of pk don't show any auth dialog

BUG: 472145